--- a/src/components/layout-header.module.scss
+++ b/src/components/layout-header.module.scss
@@ -108,6 +108,58 @@ $without-sidebar: '(max-width: 991px)';
   width: 100%;
 }
 
+.advancedSearch {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  border: 1px solid #999;
+  line-height: 2;
+  background: white;
+  box-shadow: 0 2px 4px rgb(0, 0, 0, 0.2);
+  display: flex;
+  gap: 0.5em;
+  padding: 0 0.5em;
+  align-items: center;
+  cursor: pointer;
+  opacity: 1;
+  translate: 0 0;
+  transition: all 0.1s;
+
+  &:last-child {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
+  &:hover {
+    background-color: #eee;
+  }
+
+  @starting-style {
+    opacity: 0;
+    translate: 0 -1em;
+  }
+
+  :global(.dark-theme) & {
+    background-color: $bg-color-lighter;
+    border-color: $separator-color;
+  }
+
+  :global(.dark-theme) &:hover {
+    background-color: $bg-color-lightest;
+  }
+}
+
+.advancedSearchIcon {
+  flex: none;
+  opacity: 0.5;
+}
+
+.searchInputContainer:not(:focus-within) .advancedSearch {
+  display: none;
+}
+
 .searchInput {
   width: 100%;
   background-color: transparent;
