--- a/styles/common/common.scss
+++ b/styles/common/common.scss
@@ -17,3 +17,7 @@ pre,
 samp {
   font-family: Vazir, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+select.form-control {
+  padding-inline: 0.6rem;
+}
