--- a/src/components/layout-header.module.scss
+++ b/src/components/layout-header.module.scss
@@ -261,14 +261,13 @@ $without-sidebar: '(max-width: 991px)';
   height: 32px;
   opacity: 0.4;
   transition: opacity 0.3s;
-  visibility: hidden;
 
   &:hover {
     opacity: 0.8;
   }
 
-  .searchInputContainer:focus-within & {
-    visibility: visible;
+  .searchInput:placeholder-shown ~ & {
+    display: none;
   }
 }
 
@@ -282,4 +281,46 @@ $without-sidebar: '(max-width: 991px)';
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.placeholderBox {
+  --placeholder-color: #999;
+
+  color: var(--placeholder-color);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  white-space: nowrap;
+  position: absolute;
+  inset: 0 0.5em;
+  pointer-events: none;
+
+  :global(.dark-theme) & {
+    --placeholder-color: #777;
+  }
+
+  @media (max-width: 699.9px) {
+    padding-left: 24px;
+  }
+
+  .searchInput:not(:placeholder-shown) ~ & {
+    display: none;
+  }
+
+  span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  kbd {
+    padding: 0 0.3em;
+    background-color: transparent;
+    color: inherit;
+    border: 1px solid;
+    box-shadow: none;
+
+    @media (max-width: 549px) {
+      display: none;
+    }
+  }
 }
